# api/serializers.py
@@ -1,6 +1,67 @@
 from rest_framework import serializers
+from django.contrib.auth.hashers import check_password
+from api.models import Member
 
 
-class MessageSerializer(serializers.Serializer):
-    message = serializers.CharField(max_length=200)
-    timestamp = serializers.DateTimeField(read_only=True)
+class MemberRegistrationSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = Member
+        fields = ['email', 'first_name', 'last_name', 'password']
+        extra_kwargs = {
+            'password': {'write_only': True}
+        }
+
+    def create(self, validated_data):
+        member = Member.objects.create(
+            email=validated_data['email'],
+            first_name=validated_data['first_name'],
+            last_name=validated_data['last_name'],
+            password=validated_data['password']
+        )
+        return member
+
+
+class MemberLoginSerializer(serializers.Serializer):
+    email = serializers.EmailField()
+    password = serializers.CharField(write_only=True)
+
+    def validate(self, data):
+        email = data.get('email')
+        password = data.get('password')
+
+        try:
+            member = Member.objects.get(email=email)
+        except Member.DoesNotExist:
+            raise serializers.ValidationError('Invalid credentials')
+
+        if not check_password(password, member.password):
+            raise serializers.ValidationError('Invalid credentials')
+
+        data['member'] = member
+        return data
+
+
+class MemberProfileSerializer(serializers.ModelSerializer):
+    class Meta:
+        model = Member
+        fields = ['id', 'email', 'first_name', 'last_name', 'created_at']
+        read_only_fields = ['id', 'email', 'created_at']
+
+
+class MemberUpdateSerializer(serializers.ModelSerializer):
+    password = serializers.CharField(write_only=True, required=False, allow_blank=True)
+
+    class Meta:
+        model = Member
+        fields = ['first_name', 'last_name', 'password']
+
+    def update(self, instance, validated_data):
+        instance.first_name = validated_data.get('first_name', instance.first_name)
+        instance.last_name = validated_data.get('last_name', instance.last_name)
+        
+        password = validated_data.get('password')
+        if password:
+            instance.password = password
+        
+        instance.save()
+        return instance
