# api/urls.py
@@ -1,6 +1,8 @@
 from django.urls import path
-from .views import HelloView
+from api import views
 
 urlpatterns = [
-    path("hello/", HelloView.as_view(), name="hello"),
+    path('register/', views.register_view, name='register'),
+    path('login/', views.login_view, name='login'),
+    path('profile/', views.profile_view, name='profile'),
 ]
